--- a/Projeto individual/contato.html
+++ b/Projeto individual/contato.html
@@ -20,8 +20,7 @@
             </ul>
         </div>
         <div class="content">
-            <button id="btn">Cliqui em Min</button>
-            
+            <button id="btn">Cliqui Aqui</button>
         
         </div>
         <div class="mainleft">
